TEST_PROGRAMS/VALID/02/typedeclcomp.go
package main

func main(){
    type( 
        num int;
    point struct {
        y, x float64
    }
    )
}
