TEST_PROGRAMS/INVALID/01/#19.1.go
package main

// lone expression is not allowed

func main (x,y int, z float64) {
  x;
}
